--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
 </head>
-<body>
-    <h1>Alura Books</h1>
 
+<body>
+ <header class="cabeçalho">
+    <span class="cabeçalho__menu-hamburguer"></span>
+    <img src="img/Logo.svg" alt="logo da Alurabooks">
+    <a href="#"><img src="img/Favoritos.svg"></a>
+    <a href="#"><img src="img/Compras.svg"></a>
+    <a href="#"><img src="img/Usuário.svg"></a>
+ </header>
 </body>
 
 </html>
